--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs22.x"
-    }
-  },
-  "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
-  ]
+  "name": "lemonpay-backend",
+  "builds": [{ "src": "/api/index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/src/app.js" }]
 }
