--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "version": 2,
-  "name": "lemonpay-backend",
-  "builds": [{ "src": "/api/index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/src/app.js" }]
+	"version": 2,
+	"rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
