--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
-  "builds": [
-    {
-      "src": "/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
-  ]
-}
+    "version": 2,
+    "name": "noteApp-backend",
+    "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+    "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
+  }
