--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
     "version": 2,
     "name": "noteApp-backend",
     "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
+    "routes": [{ "src": "/(.*)", "dest": "index.js" }]
   }
